<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
     <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/txtLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="My Upload"
                android:textSize="50dp" />
            
        </LinearLayout>


     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:orientation="vertical" >

         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <TableRow
                 android:id="@+id/tableRow1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <Spinner
                     android:id="@+id/categorySpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />

             </TableRow>

             <TableRow
                 android:id="@+id/tableRow2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <EditText
                     android:id="@+id/editText_dataName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10" 
                     android:hint="@string/hint_data_name"/>

             </TableRow>

             <TableRow
                 android:id="@+id/tableRow3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <EditText
                     android:id="@+id/editText_aboutData"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10" 
                     android:hint="@string/hint_about_data"/>

             </TableRow>

             <TableRow
                 android:id="@+id/tableRow4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <Button
                     android:id="@+id/uploadButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/button_upload" />

             </TableRow>
         </TableLayout>

     </LinearLayout>

</RelativeLayout>
